# mini-chat-rag

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.memory/: letter_20260206_0001.md  letter_20260206_0002.md  letter_20260206_0003.md  letter_20260206_0004.md  letter_20260206_0005.md  letter_20260206_0006.md  letter_20260206_0007.md  letter_20260206_0008.md  letter_20260206_0009.md  letter_20260206_0010.md  letter_20260206_0011.md  letter_20260206_0012.md  letter_20260206_0013.md  letter_20260206_0014.md  letter_20260206_0015.md  letter_20260206_0016.md  letter_20260207_0001.md  letter_20260207_0002.md  letter_20260207_0003.md  letter_20260209_0001.md  letter_20260209_0002.md  letter_20260209_0003.md  letter_20260210_0001.md  letter_20260210_0002.md  letter_20260210_0003.md  letter_20260210_0004.md  letter_20260211_0001.md  letter_20260211_0002.md  letter_20260211_0003.md  letter_20260211_0004.md  letter_20260211_0005.md  letter_20260211_0006.md  letter_20260211_0007.md  letter_20260211_0008.md  letter_20260211_0010.md  letter_20260211_0011.md  letter_20260211_0012.md  letter_20260317_0001.md  letter_20260318_0001.md  letter_20260325201835.md  (+1 more)
alembic/: env.py
app/: main.py
dashboard/: index.html
docs/: admin-guide.md  architecture.md  installation.md  widget-integration.md
drafts/: blog_2026-02-06_letter_20260206_0001.md  blog_2026-02-06_letter_20260206_0002.md  blog_2026-02-06_letter_20260206_0003.md  (+17 more)
fixtures/: test_upload.txt
(+81 files in other folders)
